# Projet-en-programmation-reseau-et-systeme

./: LICENSE  README.md  README_python.md  demon.c  main.py  test_app.c  testa.c
Projet_Python/: main.py  taus
Projet_Python/battle/: engine.py  engine2.py  events.py  map.py  scenario.py  unit.py
Projet_Python/data/lanchester/: stest1_lanchester.txt  stest2_lanchester.txt  stest3_lanchester.txt
Projet_Python/data/save/: autosave_save.txt  stest1_save.txt
Projet_Python/ia/: Julius_Caesar.py  base_general.py  brain_dead.py  coord1_ia.py  daft.py  registry.py  smart_ia.py  strategus10.py  tacticus30.py
Projet_Python/reports/: reporter.py
Projet_Python/scenario_generator/: scenario_maker.py
Projet_Python/tournaments/: lanchester_manager.py  tournament_manager.py
Projet_Python/visuals/: gui_view.py  terminal_view.py
battle/: engine2.py  events.py  map.py  projectile.py  scenario.py  unit.py
data/: units.json
data/scenario/: 104u_KCPL_175.txt  52u_KCPL_100.txt  55u_emix_150.txt  stest11.txt  stest12.txt  stest5.txt  stest6.txt  stest7.txt  stest9.txt
ia/: base_general.py  basic_ia.py  coord_ia.py  strategus11.py  strategus20.py  tacticus10.py  tacticus11.py  tacticus12.py  tacticus20.py  void.py
network/: .gitignore  CMakeLists.txt  EVENTS.md  Makefile  README.md  bridge.py  cmake_install.cmake  medievail_net
network/include/medievail_net/: app.h  ipc.h  log.h
network/src/: daemon_stub.c
network/src/core/: app.c  log.c
network/src/ipc/: udp_local.c  unix_socket.c  win_named_pipe.c
visuals/: gui_view.py
(+17 files in other folders)
